# pdf-tool

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: deuda-tecnica.md  roadmap.md
installer/: windows.iss
pdftool/: __init__.py  main.py
pdftool/core/: config.py  jobs.py  logger.py  plugin.py  registry.py  thumbnails.py  updater.py
pdftool/tools/compress/: __init__.py  logic.py  panel.py  params.py
pdftool/tools/images2pdf/: __init__.py  logic.py  panel.py  params.py
pdftool/tools/merge/: __init__.py  logic.py  panel.py  params.py
pdftool/tools/protect/: __init__.py  logic.py  panel.py  params.py
pdftool/tools/split/: __init__.py  logic.py  panel.py  params.py
pdftool/tools/watermark/: __init__.py  logic.py  panel.py  params.py
pdftool/ui/: app.py  errors.py  logs.py  panel_base.py  platform.py  theme.py  thumbnails.py
tests/: conftest.py
tests/core/: test_config.py  test_jobs.py  test_logger.py  test_plugin.py  test_registry.py  test_thumbnails.py  test_updater.py
tests/tools/compress/: test_logic.py  test_params.py
tests/tools/images2pdf/: test_logic.py
tests/tools/merge/: test_logic.py
tests/tools/protect/: test_logic.py
tests/tools/split/: test_logic.py  test_params.py
tests/tools/watermark/: test_logic.py
tests/ui/: test_errors.py  test_logs.py  test_output_name.py  test_panels.py  test_platform.py  test_thumbnails_loader.py
