[tool.poetry]
name = "pdf-tool"
version = "0.1.0"
description = "App de escritorio para gestionar PDFs (modular)."
authors = ["Juan Manuel Armero <juanmanuel.armero@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pdftool" }]

[tool.poetry.dependencies]
python = "^3.11"
# 0.28.2 fijo: 0.28.3 tiene una regresión en macOS donde el FilePicker no abre
# (flet issue #5334). 0.28.2 es la última sana de la serie 0.28.
flet = "0.28.2"
pymupdf = "^1.24.0"
pydantic = "^2.6.0"
platformdirs = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
pdftool = "pdftool.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Config de `flet build` (no afecta a poetry/los tests) ---
# flet arrastra webview_flutter aunque no lo usemos. Sus versiones nuevas exigen
# Dart >= 3.9, pero el Flutter 3.29 (que requiere flet 0.28) solo llega a Dart 3.7.
# Pineamos las últimas versiones de webview compatibles con Dart 3.7 para que el
# build no rompa al compilar el grafo Dart completo.
[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter = "4.13.0"
webview_flutter_android = "4.10.1"
webview_flutter_wkwebview = "3.23.0"
webview_flutter_platform_interface = "2.14.0"
